tests/define-units-relationship/fail_1_is_bad_literal_div_1.stderr
error: no rules expected the token `2`
  --> tests/define-units-relationship/fail_1_is_bad_literal_div_1.rs:34:49
   |
34 | rs_measures::define_units_relationship! { U1 == 2 / U2 }
   |                                                 ^ no rules expected this token in macro call
   |
note: while trying to match meta-variable `$id2:ident`
  --> src/define_units_relationship.rs
   |
   |     { $id1:ident == $id2:ident * $id3:ident} => { rs_measures::expand_1_1! {$id2 $id3 $id1} };
   |                     ^^^^^^^^^^
